# JulaboFL1703-control

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  generate_example_plots.py  gitlab-ci.yml  julabo_control.py  pyproject.toml  remote_client.py  remote_control_server.py
.github/workflows/: ci.yml  publish.yml
docs/: DEPLOYMENT.md  PROTOCOL.md  SECURITY.md  TROUBLESHOOTING.md
examples/: julabo-server.env  julabo-server.service  ramp_up.csv  step_and_hold.csv  thermal_cycle.csv
julabo_control/: __init__.py  __main__.py  alarm.py  async_server.py  cli.py  config.py  core.py  db.py  dispatch.py  gui.py  logging_utils.py  mqtt_bridge.py  notifications.py  remote_client.py  remote_server.py  schedule.py  simulator.py  temperature_logger.py  ui.py  web.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: julabo.json
tests/: conftest.py  test_alarm.py  test_alertmanager.py  test_async_server.py  test_cli.py  test_config.py  test_core.py  test_db.py  test_e2e_simulator.py  test_gui.py  test_integration.py  test_logging_utils.py  test_metrics.py  test_mqtt_bridge.py  test_notifications.py  test_remote_client.py  test_remote_server.py  test_schedule.py  test_schedule_hypothesis.py  test_simulator.py  test_temperature_logger.py  test_ui.py  test_web.py  test_websocket.py
workflows/: confluence-sync.yml
